alias: added sshkeygen, environments: fixed sbt opts, ammonite/predef.sc: fixed repos